k8s/11_staff_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service-deployment
  labels:
    app: staff-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staff-service
  template:
    metadata:
      labels:
        app: staff-service
    spec:
      containers:
      - name: staff-service
        image: us-central1-docker.pkg.dev/stone-album-437618-f8/hrmis-artifact-registry/staff-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: staff-service
spec:
  selector:
    app: staff-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8086
