k8s/11_table_reservation_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: table-reservation-service-deployment
  labels:
    app: table-reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: table-reservation-service
  template:
    metadata:
      labels:
        app: table-reservation-service
    spec:
      containers:
      - name: table-reservation-service
        image: venuraks/sep-16-table-reservation-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: table-reservation-service
spec:
  selector:
    app: table-reservation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
