k8s/12_booking_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: us-central1-docker.pkg.dev/stone-album-437618-f8/hrmis-artifact-registry/booking-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
