k8s/13_table_reservation_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: table-reservation-service-deployment
  labels:
    app: table-reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: table-reservation-service
  template:
    metadata:
      labels:
        app: table-reservation-service
    spec:
      containers:
      - name: table-reservation-service
        image: us-central1-docker.pkg.dev/stone-album-437618-f8/hrmis-artifact-registry/table-reservation-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: table-reservation-service
spec:
  selector:
    app: table-reservation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
