k8s/14_contact_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-service-deployment
  labels:
    app: contact-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contact-service
  template:
    metadata:
      labels:
        app: contact-service
    spec:
      containers:
      - name: contact-service
        image: us-central1-docker.pkg.dev/stone-album-437618-f8/hrmis-artifact-registry/contact-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8077
---
apiVersion: v1
kind: Service
metadata:
  name: contact-service
spec:
  selector:
    app: contact-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8077
