k8s/15_email_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-deployment
  labels:
    app: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
      - name: email-service
        image: us-central1-docker.pkg.dev/stone-album-437618-f8/hrmis-artifact-registry/email-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8079
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8079
