k8s/5_config_server.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  clusterIP: None
  ports:
    - port: 8888
      name: config-server
  selector:
    app: config-server

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: config-server
spec:
  serviceName: "config-server"
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: us-central1-docker.pkg.dev/stone-album-437618-f8/hrmis-artifact-registry/config-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
---

apiVersion: v1
kind: Service
metadata:
  name: config-server-lb
  labels:
    app: config-server
spec:
  selector:
    app: config-server
  type: NodePort
  ports:
    - port: 80
      targetPort: 8888
