k8s/6_review_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service-deployment
  labels:
    app: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
      - name: review-service
        image: venuraks/sep-16-review-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  selector:
    app: review-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
