k8s/7_menu_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-service-deployment
  labels:
    app: menu-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu-service
  template:
    metadata:
      labels:
        app: menu-service
    spec:
      containers:
      - name: menu-service
        image: venuraks/sep-16-menu-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
spec:
  selector:
    app: menu-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
