k8s/9_staff_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service-deployment
  labels:
    app: staff-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staff-service
  template:
    metadata:
      labels:
        app: staff-service
    spec:
      containers:
      - name: staff-service
        image: venuraks/sep-16-staff-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: staff-service
spec:
  selector:
    app: staff-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8086
